--- a/ASPAssignment1/ASPAssignment1/Views/Shared/_Layout.cshtml
+++ b/ASPAssignment1/ASPAssignment1/Views/Shared/_Layout.cshtml
@@ -43,6 +43,7 @@
                 </div>
             </div>
         </nav>
+        <h1>Product Manager</h1>
     </header>
     <div class="container">
         <main role="main" class="pb-3">
