--- a/ASPAssignment1/ASPAssignment1/Views/Product/Edit.cshtml
+++ b/ASPAssignment1/ASPAssignment1/Views/Product/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Product>
 @{
-    ViewBag.Title = "Add Product";
+    ViewBag.Title = "Edit Product";
 }
 
 <body>
-    <h1>Add Product</h1>
+    <h1>Edit Product</h1>
     <form>
         <label for="code">Code</label><br />
         <input type="text" id="code" name="code" value="code" /><br />
