--- a/ASPAssignment1/ASPAssignment1/Views/Shared/_Layout.cshtml
+++ b/ASPAssignment1/ASPAssignment1/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Privacy">Products</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="ProductManager">Products</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Technicians" asp-action="Privacy">Technicians</a>
@@ -43,7 +43,6 @@
                 </div>
             </div>
         </nav>
-        <h1>Product Manager</h1>
     </header>
     <div class="container">
         <main role="main" class="pb-3">
