--- a/ASPAssignment1/ASPAssignment1/Views/Product/ProductManager.cshtml
+++ b/ASPAssignment1/ASPAssignment1/Views/Product/ProductManager.cshtml
@@ -1,25 +1,8 @@
 ﻿@model IEnumerable<Product>
 @{
     ViewBag.Title = "Product Manager";
+    Layout = "../Shared/_Layout.cshtml";
 }
-
-// nav bar
-<div>
-    <h1 class="display-4">SportsPro Technical Support</h1>
-    <p>Sports management software for the sports enthusiast</p>
-    <div>
-        <h2>Admin</h2>
-        <button style="padding:15px; width:50%; text-align:left;">Manage Products</button><br />
-        <button style="padding:15px; width:50%; text-align:left;">Manage Technicians</button><br />
-        <button style="padding:15px; width:50%; text-align:left;">Manage Customers</button><br />
-        <button style="padding:15px; width:50%; text-align:left;">Manage Incidents</button><br />
-        <button style="padding:15px; width:50%; text-align:left;">Manage Registrations</button>
-    </div>
-    <div>
-        <h2>Technicians</h2>
-        <button style="padding:15px; width:50%; text-align:left;">Update Incident</button>
-    </div>
-</div>
 
 // For the Product Manager Page
 <body>
