--- a/ASPAssignment1/ASPAssignment1/Views/Incident/IncidentManager.cshtml
+++ b/ASPAssignment1/ASPAssignment1/Views/Incident/IncidentManager.cshtml
@@ -13,7 +13,7 @@
         <button id="open">Open incidents</button>
     </div>
     <div id="all">
-        label for="incident">Incident:</label>
+        <label for="incident">Incident:</label>
         <select name="incident" id="incident">
             @foreach (Incident incident in Model)
             {
